@@ -496,6 +496,8 @@ x2goclient (4.0.5.3-0x2go1) UNRELEASED; urgency=medium
       discovery.
     - src/pulsemanager.cpp: refactor PA binary searching code. Less
       duplication now.
+    - src/onmainwindow.cpp: fix sshd_config generation on UNIX by searching
+      for the real sftp-server binary path.
 
   [ Bernard Cafarelli ]
   * New upstream version (4.0.5.3):
